# f1-picks-2026

./: .gitignore  AGENTS.md  Makefile  README.md  eslint.config.js  index.html  package.json  tsconfig.json  wrangler.json
agent/: .env.example  README.md  package.json  tsconfig.json
agent/diary/: diary-2026.md
agent/src/: f1-picks-server.ts  hooks.ts  index.ts  logger.ts  prompt.ts
analysis/: README.md  optimal_picks_2026.csv  picks-diary-2026.md  picks_analysis.ipynb  picks_analysis_output.ipynb  pyproject.toml
migrations/: 0001_create_users.sql  0002_create_sessions.sql  0003_create_seasons.sql  0004_create_drivers.sql  0005_create_races.sql  0006_create_picks.sql  0007_create_race_results.sql  0008_create_user_season_stats.sql  0009_seed_2026_season.sql  0010_create_push_subscriptions.sql  0011_create_notification_log.sql  0012_fix_sprint_and_race_times.sql
public/: manifest.json  sw.js
shared/: constants.ts  pick-window.ts  scoring.ts  types.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
src/components/: Countdown.test.tsx  Countdown.tsx  DriverCard.test.tsx  DriverCard.tsx  Layout.tsx  NotificationSettings.tsx
src/demo/: api.ts  data.ts  index.ts  scenarios.ts  store.ts
src/lib/: api.ts  push-notifications.ts  utils.ts
src/pages/: AdminResults.tsx  Dashboard.test.tsx  Dashboard.tsx  Leaderboard.test.tsx  Leaderboard.tsx  Login.test.tsx  Login.tsx  MakePick.test.tsx  MakePick.tsx  Profile.test.tsx  Profile.tsx  RaceDetail.tsx  Register.test.tsx  Register.tsx  SeasonCalendar.test.tsx  SeasonCalendar.tsx
worker/: index.ts  types.ts
(+138 files in other folders)
